# diablo_mpc

./: .gitignore  LICENSE  README.markdown  README.md
src/diablo-onboard-sdk/: CMakeLists.txt  Readme.md
src/diablo-onboard-sdk/api/inc/: OSDK_Broadcaster.hpp  OSDK_Callback.hpp  OSDK_CallbackManager.hpp  OSDK_DDJ_M15.hpp  OSDK_HAL.hpp  OSDK_Listener.hpp  OSDK_Movement.hpp  OSDK_Telemetry.hpp  OSDK_Vehicle.hpp  OSDK_Virtual_RC.hpp  Onboard_SDK_Uart_Protocol.h
src/diablo-onboard-sdk/api/src/: OSDK_Broadcaster.cpp  OSDK_Callback.cpp  OSDK_CallbackManager.cpp  OSDK_HAL.cpp  OSDK_Listener.cpp  OSDK_Log.cpp  OSDK_Movement.cpp  OSDK_Telemetry.cpp  OSDK_Vehicle.cpp  OSDK_Virtual_RC.cpp
src/diablo-onboard-sdk/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/diablo-onboard-sdk/bridge/inc/: OSDK_Bridge.hpp
src/diablo-onboard-sdk/bridge/src/: OSDK_Bridge.cpp
src/diablo-onboard-sdk/example/bridge_receiver/: CMakeLists.txt  main.cpp
src/diablo-onboard-sdk/example/callback_test/: CMakeLists.txt  main.cpp
src/diablo-onboard-sdk/example/diablo_ctrl/: main.cpp
src/diablo-onboard-sdk/example/movement_ctrl/: CMakeLists.txt  main.cpp
src/diablo-onboard-sdk/example/ros_bridge/: CMakeLists.txt  main.cpp
src/diablo-onboard-sdk/example/virtual_rc/: CMakeLists.txt  main.cpp
src/diablo-onboard-sdk/serial/: CMakeLists.txt  Makefile  package.xml
src/diablo-onboard-sdk/serial/include/serial/: serial.h
src/diablo-onboard-sdk/serial/include/serial/impl/: unix.h
src/diablo-onboard-sdk/serial/launch/: cv_master.launch
src/diablo-onboard-sdk/serial/src/impl/: unix.cc
src/fake_ugv/src/: poscmd_2_odom.cpp
src/mpc/: CMakeLists.txt  package.xml
src/mpc/config/: param.yaml
src/mpc/include/: cubic_spline_planner.h  mpc.h
src/mpc/include/mpc_utils/: traj_anal.hpp
src/mpc/launch/: test_mpc.launch
src/mpc/rviz/: default.rviz
src/mpc/src/: cubic_spline_planner.cpp  mpc.cpp
