<?xml version="1.0"?>
<package format="2">
  <name>serial</name>
  <version>1.2.1</version>
  <description>
    Serial is a cross-platform, simple to use library for using serial ports on computers.
    This library provides a C++, object oriented interface for interacting with RS-232
    like devices on Linux and Windows.
  </description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>MIT</license>

  <url type="website">http://wjwwood.github.com/serial/</url>
  <url type="repository">https://github.com/wjwwood/serial</url>
  <url type="bugtracker">https://github.com/wjwwood/serial/issues</url>

  <author email="wjwwood@gmail.com">William Woodall</author>
  <author email="ash.gti@gmail.com">John Harrison</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>rm_vehicle_msgs</depend>
  <depend>rm_cv_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>boost</test_depend>

</package>
